Cleanup VirtualThreadTest
- enable-preview not needed anymore
- don't hide exceptions
- use nio to create directories
- added more info about compiler used to compile program

See https://github.com/eclipse-jdt/eclipse.jdt.debug/issues/503